--- a/src/main/resources/static/hospitalpage.html
+++ b/src/main/resources/static/hospitalpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Healthchain Medicines Main Page</title>
+	<title>Healthchain Hospitals Main Page</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link th:href="@{/css/index.css}"/>
 </head>
@@ -11,8 +11,8 @@
 	</div>
 
 	<div class="ButtonsSection">
-		<button type="button" th:onclick="goToExistingMedicinesPage()">Existing</button>
-		<button type="button" th:onclick="goToMedicineCreatorPage()">New</button>
+		<button type="button" th:onclick="goToExistingHospitalsPage()">Existing</button>
+		<button type="button" th:onclick="goToHospitalCreatorPage()">New</button>
 	</div>
 </body>
 </html>
