--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
 	<div class="ButtonsSection">
 		<button type="button" th:onclick="goToPatientsPage()">Patients</button>
 		<button type="button" th:onclick="goToDiseasesPage()">Diseases</button>
-		<button type="button" th:onclick="goToMedicinesPage()">Medicines</button>
+		<button type="button" th:onclick="goToHospitalsPage()">Hospitals</button>
 	</div>
 </body>
 </html>
