Updated html files

--- a/src/main/resources/static/recordcreated.html
+++ b/src/main/resources/static/recordcreated.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Healthchain Diseases Main Page</title>
+	<title>Healthchain Record Created Page</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link th:href="@{/css/index.css}"/>
 </head>
 <body>
 	<div class="PageHeader">
-		<h1>DISEASES</h1>
+		<h1>Record is created and put on the blockchain!</h1>
 	</div>
 
 	<div class="ButtonsSection">
